# rusty-mazes

./: Cargo.toml  README.md  rustfmt.toml
assets/maps/: 01-waterworld.json  02.json  03.json  10-the-factory.json  11-maze.json  12.json  13-redblue.json  21-iceworld.json  22.json  23.json  30-sokoban.json  31-sokoban.json
assets/textures/: clean.bash  convert.bash
src/: block.rs  color.rs  dir.rs  editor.rs  encoding.rs  error.rs  gamestate.rs  keys.rs  lib.rs  main.rs  map.rs  mover.rs  palette.rs  prelude.rs  pt.rs  rect.rs  sdl.rs  viewport.rs
