[package]
name = "game"
version = "0.1.0"
authors = ["Arne Vansteenkiste <barnex@gmail.com>"]
edition = "2018"
path = "src/lib.rs"
default-run= "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "main"
path = "src/main.rs"